kubernetes/apps/main/games/minecraft/app/httproute.yaml
---
# yaml-language-server: $schema=https://k8s-schemas.home-operations.com/gateway.networking.k8s.io/httproute_v1.json
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: minecraft-map
spec:
  hostnames:
    - "map.${SECRET_DOMAIN}"
  parentRefs:
    - name: envoy-external
      namespace: network
  rules:
    - backendRefs:
        - name: minecraft-map
          namespace: games
          port: 8100
